# Event-Fraud-Detection-Case-study

./: README.md  app.py  class_features_final_525.py  justin.py  pyproject.toml
event_detection/: api_client.py  app.py  feature_engineering.py  mongo_db_process.py
event_detection/templates/: layout.html
static/: main.css
templates/: index.html  score.html
tests/: test_event_detection.py
