[tool.poetry]
name = "event_detection"
version = "0.1.0"
description = ""
authors = ["Justin Ho <44845829+justinho8161@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
